Fix z-index bug

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,4 +1,5 @@
 .header {
+    z-index: 9;
     position: fixed;
     top: 0;
     left: 0;
